# decoding-backpropagation

./: README.md  pyproject.toml
src/: ignore_file.py  main.py
src/data/: dataset.py
src/model/: inference.py  train.py
tests/: test_main.py
